--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_HEADER_LANGUAGE=x-custom-lang
 FRONTEND_DOMAIN=http://localhost:3000
 BACKEND_DOMAIN=http://localhost:3000
 
-DATABASE_TYPE=postgres
+DATABASE_TYPE=localhost
 DATABASE_HOST=postgres
 DATABASE_PORT=5432
 DATABASE_USERNAME=root
